--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,73 @@
 	font-style: normal;
 }
 
+/* !!            global              */
+
+html {
+	position: relative;
+	box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+}
+
+body {
+	min-width: 320px;
+	min-height: 100vh;
+}
+
+img {
+	max-width: 100%;
+	max-height: 100%;
+	height: auto;
+}
+
+button {
+	padding: 0;
+	cursor: pointer;
+	border: none;
+	background-color: transparent;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+ul {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+h1,
+h2,
+h3,
+p,
+figure,
+fieldset,
+blockquote {
+	margin: 0;
+}
+
+iframe {
+	border: none;
+}
+
+/*
+Доступно скрываю элементы
+*/
+
+.visually-hidden {
+  position: fixed;
+  transform: scale(0);
+}
+
+/* !!         Общие настройки              */
+
 h1,
 h2,
 h3,
@@ -34,7 +101,7 @@ body {
 	color: #2d2d2d;
 }
 
-.container-one {
+.container-large {
 	width: 1090px;
 	margin-left: 76px;
 }
@@ -44,7 +111,7 @@ body {
 	margin-left: 76px;
 }
 
-h1 {
+.article-main__one-title {
 	margin-top: 100px;
 	margin-bottom: 65px;
 	font-family: 'Droid Serif';
@@ -54,7 +121,9 @@ h1 {
 	color: #2d2d2d;
 }
 
-p {
+.article-main__one-text,
+.article-main__wrap-text,
+.article-main__inner-text {
 	margin-bottom: 50px;
 	text-align: left;
 }
@@ -70,7 +139,7 @@ p {
 	list-style-type: space-counter;
 }
 
-h2 {
+.article-main__wrap-title {
 	font-weight: 700;
 }
 
@@ -78,6 +147,13 @@ h3 {
 	margin-top: 50px;
 }
 
-section {
-	margin-bottom: 50px;
+.article-main__one,
+.article-main__wrap-two,
+.article-main__wrap-three,
+.article-main__wrap-thour,
+.article-main__wrap-five,
+.article-main__inner-six,
+.article-main__inner-seven,
+.article-main__inner-octet {
+	padding-bottom: 50px;
 }
